2012-03-14  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (EXTRA_DIST): Add tapset/jstack.stp.in.

2012-03-13  Mark Wielaard  <mjw@redhat.com>

	* tapset/jstack.stp.in: Wrap heap accessors in try-catch block to be
	able to report unusual frames.

2012-03-13  Mark Wielaard  <mjw@redhat.com>

	* tapset/jstack.stp.in: Use @var construct if available to pick
	target variable from the right CU (needed by newer DWARF/gcc
	versions).

2012-03-13  Mark Wielaard  <mjw@redhat.com>

	* tapset/jstack.stp.in: Index globals on pid() to support multiple
	running hotspot jstacks at the same time.

2012-03-13  Mark Wielaard  <mjw@redhat.com>

	* tapset/jstack.stp.in: Don't hard code constantPoolOopDesc_size.

2012-02-24  Deepak Bhole <dbhole@redhat.com>

	PR885: IcedTea7 does not build scripting support
	* patches/rhino.patch: Added 'script' to list of modules built.

2011-10-03  Xerxes Rånby  <xerxes@zafena.se>
	    Robert Lougher <rob@jamvm.org.uk>

	* pulseaudio/src/native/org_classpath_icedtea_pulseaudio_Stream.c
	  (Java_org_classpath_icedtea_pulseaudio_Stream_native_1pa_1stream_1get_1buffer_1attr):
	  Make code compliant to the JNI specification.
	  Enable pulseaudio to work in combination with JVM that strictly
	  implement JNI spec.

2011-10-03  Xerxes Rånby  <xerxes@zafena.se>
	    David Henningsson <david.henningsson@canonical.com>
	    Matthias Klose <doko@ubuntu.com>

	LP862286
	* pulseaudio/src/native/org_classpath_icedtea_pulseaudio_EventLoop.c
	  (context_change_callback):
	  Fix exception on trying to start PulseAudio playback on ARM.

2011-09-29  Xerxes Rånby  <xerxes@zafena.se>
	    David Henningsson <david.henningsson@canonical.com>

	LP862286
	* NEWS: Updated.
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/
	  PulseAudioDataLine.java (addStreamListeners): 
	  Fix exception on trying to start PulseAudio playback.

2011-06-20  Denis Lila  <dlila@redhat.com>

	* pulseaudio/src/native/org_classpath_icedtea_pulseaudio_Stream.c